@@ -1,3 +1,15 @@
+2012-09-26  Xiaobo Wang  <xbwang@torchmobile.com.cn>
+
+        [BlackBerry] [DRT] eventSender.keyDown() doesn't support Ctrl key modifier
+        https://bugs.webkit.org/show_bug.cgi?id=97665
+
+        Reviewed by Rob Buis.
+
+        This patch fixes test fast/forms/input-text-option-delete.html.
+
+        * DumpRenderTree/blackberry/EventSender.cpp:
+        (keyDownCallback):
+
 2012-09-26  Dinu Jacob  <dinu.s.jacob@intel.com>
 
         Unreviewed. Adding myself as a committer.
